# openbox

./: Dockerfile  Makefile  pyproject.toml  run.py
.codebox/: session_states
examples/: async_file_io.py  async_plot_dataset.py  file_io.py  plot_dataset.py  session_restoring.py
openbox/: __init__.py  config.py  schema.py
openbox/box/: __init__.py  base.py  docker.py  jupyter.py
openbox/tests/: general_test.py  run_all_examples.py
openbox/websockets/: __init__.py  __main__.py  client.py  datastructures.py  exceptions.py  frames.py  headers.py  http.py  http11.py  imports.py  protocol.py  server.py  streams.py  typing.py  uri.py  utils.py
openbox/websockets/extensions/: base.py  permessage_deflate.py
openbox/websockets/legacy/: async_timeout.py  auth.py  client.py  framing.py  handshake.py  http.py  protocol.py  server.py
openbox/websockets/sync/: client.py  connection.py  messages.py  server.py  utils.py
